--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.1.2/socket.io.js"></script>
     <script>
-        const socket = io();
+        const socket = io('/socket_project');
 
         function connectToMobileServer() {
             // 서버에 연결 (모바일 클라이언트)
