--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
     <!-- 출력 창 -->
     <div id="messageOutput"></div>
 
-    <!--script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.4/socket.io.js"></script-->
-    <script src="/socket.io/socket.io.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.4/socket.io.js"></script>
     <script>
         const socket = io();
 
