--- a/pc.html
+++ b/pc.html
@@ -16,7 +16,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.4/socket.io.js"></script>
     <script>
-        const socket = io('http://localhost:3567');
+        const socket = io('http://218.38.65.83:3567');
 
         function sendPCMessage() {
             const message = document.getElementById('pcMessageInput').value;
