--- a/mobail.html
+++ b/mobail.html
@@ -16,7 +16,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.7.4/socket.io.js"></script>
     <script>
-        const socket = io('http://localhost:3567');
+        const socket = io();
 
         function sendMobileMessage() {
             const message = document.getElementById('mobileMessageInput').value;
