--- a/pc.html
+++ b/pc.html
@@ -37,6 +37,8 @@
                     <p>Dog Breed: ${data.dogData.breed}</p>
                     <!-- 추가적인 강아지 데이터 출력 -->
                 `;
+
+                console.log('Received dog data from mobile:', data.dogData);
             }
         });
 
