--- a/pc.html
+++ b/pc.html
@@ -38,7 +38,7 @@
                     <!-- 추가적인 강아지 데이터 출력 -->
                 `;
 
-                console.log('Dog data received from server:', dogData);
+                console.log('Dog data received from server:', data.dogData);
             }
         });
 
