--- a/pc.html
+++ b/pc.html
@@ -28,19 +28,19 @@
 
         socket.on('dataToClient', (data) => {
             const messageOutput = document.getElementById('messageOutput');
-            messageOutput.innerHTML += `<p>${data.from}: ${data.data}</p>`;
+            messageOutput.innerHTML += `<p>${data.from}: ${data.message}</p>`;
 
-            if (data.data && data.data.name) {
+            if (data.dogData) {
                 const dogDataOutput = document.getElementById('dogDataOutput');
                 dogDataOutput.innerHTML = `
-                    <p>Dog Name: ${data.data.name}</p>
-                    <p>Dog Age: ${data.data.age}</p>
-                    <p>Dog Breed: ${data.data.breed}</p>
+                    <p>Dog Name: ${data.dogData.name}</p>
+                    <p>Dog Age: ${data.dogData.age}</p>
+                    <p>Dog Breed: ${data.dogData.breed}</p>
                 `;
             }
 
             const textOutput = document.getElementById('textOutput');
-            textOutput.innerHTML += `<p>Received data: ${JSON.stringify(data.data)}</p>`;
+            textOutput.innerHTML += `<p>Received data: ${JSON.stringify(data.dogData)}</p>`;
         });
 
         socket.on('connect', () => {
