--- a/mobile.html
+++ b/mobile.html
@@ -39,7 +39,14 @@
 
         socket.on('dataToClient', (data) => {
             const messageOutput = document.getElementById('messageOutput');
-            messageOutput.innerHTML += `<p>${data.from}: ${data.message}</p>`;
+
+            // 브로드캐스팅된 데이터가 객체일 경우 JSON.stringify 사용
+            const message = typeof data.message === 'object' ? JSON.stringify(data.message) : data.message;
+
+            messageOutput.innerHTML += `<p>${data.from}: ${message}</p>`;
+
+            const textOutput = document.getElementById('textOutput');
+            textOutput.innerHTML += `<p>Received data: ${message}</p>`;
         });
 
         socket.on('connect', () => {
