--- a/mobile.html
+++ b/mobile.html
@@ -39,16 +39,21 @@
 
         socket.on('dataToClient', (data) => {
             const output = document.getElementById('output');
-            
-            let logMessage;
-            if (typeof data.message === 'object') {
-                // 객체인 경우 JSON.stringify를 사용하여 문자열로 변환
-                logMessage = `<p>${data.from}: ${JSON.stringify(data.message)}</p>`;
-            } else {
-                logMessage = `<p>${data.from}: ${data.message}</p>`;
-            }
 
-            output.innerHTML += logMessage;
+            // output이 null이 아닌 경우에만 처리
+            if (output) {
+                let logMessage;
+                if (typeof data.message === 'object') {
+                    // 객체인 경우 JSON.stringify를 사용하여 문자열로 변환
+                    logMessage = `<p>${data.from}: ${JSON.stringify(data.message)}</p>`;
+                } else {
+                    logMessage = `<p>${data.from}: ${data.message}</p>`;
+                }
+
+                output.innerHTML += logMessage;
+            } else {
+                console.error('Output element not found');
+            }
         });
 
         socket.on('connect', () => {
