--- a/mobile.html
+++ b/mobile.html
@@ -14,6 +14,7 @@
 
     <button onclick="sendDogData()">Send Dog Data to Server</button>
 
+    <div id="output"></div>
     <div id="messageOutput"></div>
     <div id="textOutput"></div>
 
