--- a/pc.html
+++ b/pc.html
@@ -31,11 +31,9 @@
             const dogDataOutput = document.getElementById('dogDataOutput');
             const textOutput = document.getElementById('textOutput');
 
-            let logMessage;
-
             if (data.type === 'message' && data.data !== undefined) {
                 // Message 출력
-                logMessage = `<p>${data.from}: ${data.data}</p>`;
+                //messageOutput.innerHTML += `<p>${data.from}: ${data.data}</p>`;
                 textOutput.innerHTML += `<p>Received message: ${data.data}</p>`;
             }
 
@@ -47,10 +45,6 @@
                     <p>Dog Breed: ${data.data.breed}</p>
                 `;
                 textOutput.innerHTML += `<p>Received dog data: ${JSON.stringify(data.data)}</p>`;
-            }
-
-            if (logMessage) {
-                messageOutput.innerHTML += logMessage;
             }
         })
 
